# claude-code-gui

./: .clauderc  README.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-01-multi-agent-and-plugins-implementation.md
docs/superpowers/specs/: 2026-04-01-multi-agent-and-plugins-design.md
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  mcp.rs  mcp_info.txt  tauri.conf.json
src-tauri/src/: lib.rs  mcp.rs
src/agents/: AgentTool.tsx  index.ts  runAgent.ts  types.ts
src/agents/built-in/: explore.ts  general.ts  index.ts  plan.ts
src/agents/teammate/: index.ts  registry.test.ts  registry.ts
src/plugins/: builtinPlugins.ts  index.ts  pluginLoader.ts  types.ts
src/skills/: bundledSkills.ts  loadSkillsDir.ts  parser.test.ts  parser.ts  types.ts
src/utils/: frontmatterParser.test.ts  frontmatterParser.ts
