[package]
name = "claude-code-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_code_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
glob = "0.3.1"
regex = "1.10"
ignore = "0.4.22"
reqwest = { version = "0.12", features = ["json"] }
html2md = "0.2"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
tree-sitter = "0.26.8"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
base64 = "0.22"
mime_guess = "2.0.5"
cron = "0.12"
chrono = "0.4"
scraper = "0.20"
urlencoding = "2.1.3"
mime = "0.3.17"
async-process = "2.5.0"
async-std = "1.13.2"
futures = "0.3.32"
jsonrpc-core = "18.0.0"
tauri-plugin-dialog = "2.6.0"

